[package]
name = "rustfs-uring"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Cancel-safe async io_uring read backend for RustFS storage."
repository = "https://github.com/rustfs/uring"
readme = "README.md"
keywords = ["io_uring", "async", "storage", "rustfs", "linux"]
categories = ["asynchronous", "filesystem"]
# Not published to crates.io yet: git dependency only until the P2 work
# (write path, eventfd/AsyncFd reaping, O_DIRECT) lands. See docs/DESIGN.md.
publish = false

[dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
